--- a/Week-1/Homework-2/index.html
+++ b/Week-1/Homework-2/index.html
@@ -8,10 +8,27 @@
 <p>Hello, my name is Uygarcan. A computer engineering graduate with a passion to learn more about fullstack programming</p>
 
 <!--Second Header-->
-<h2>Things that I like</h2>
+<h2>Areas of interest</h2>
 
-<!--Sub Header of the Second Header-->
-<h3>Video games, movies</h3>
-
-<!--Paragraph of second header's sub header-->
-<p>I like to play video games, RPG(role play games) games are my favourite. I like to watch sci-fi movies or read books about that genre.</p>
+<ol>
+    <li>Movies
+        <ul style="list-style-type: square">
+            <li><a href="https://www.imdb.com/title/tt0816692/" target="_blank">Interstellar</a></li>
+            <li><a href="https://www.imdb.com/title/tt0120737/" target="_blank">The Lord of the Rings: The Fellowship of the Ring</a></li>
+            <li><a href="https://www.imdb.com/title/tt0167261/" target="_blank">The Lord of the Rings: The Two Towers</a></li>
+            <li><a href="https://www.imdb.com/title/tt0167260/" target="_blank">The Lord of the Rings: The Return of the King</a></li>
+        </ul>
+    </li>
+    <li>TV Series
+        <ul style="list-style-type: decimal">
+                <li><a href="https://www.imdb.com/title/tt0407362/" target="_blank">Battlestar Galactica</a></li>
+                <li><a href="https://www.imdb.com/title/tt0060028/" target="_blank">Star Trek</a></li>
+        </ul>
+    </li>
+        <li>Books
+        <ul style="list-style-type: lower-roman;">
+            <li>All of the Middle-earth books written by J.R.R. Tolkien</li>
+            <li>The Hitchhiker's Guide to the Galaxy</li>
+        </ul>
+    </li>
+</ol>
