--- a/Week-1/Homework-1/index.html
+++ b/Week-1/Homework-1/index.html
@@ -1,18 +1,18 @@
-<!--Header-->
-<h1>Uygarcan Boz</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+    <h1>Uygarcan Boz</h1>
+    <h3>About</h3>   
+    <p>Hello, my name is Uygarcan. A computer engineering graduate with a passion to learn more about fullstack programming</p>  
+    <h2>Things that I like</h2>   
+    <h3>Video games, movies</h3>  
+    <p>I like to play video games, RPG(role play games) games are my favourite. I like to watch sci-fi movies or read books about that genre.</p>
 
-<!--Sub Header-->
-<h3>About</h3>
-
-<!--Paragraph-->
-<p>Hello, my name is Uygarcan. A computer engineering graduate with a passion to learn more about fullstack programming</p>
-
-<!--Second Header-->
-<h2>Things that I like</h2>
-
-<!--Sub Header of the Second Header-->
-<h3>Video games, movies</h3>
-
-<!--Paragraph of second header's sub header-->
-<p>I like to play video games, RPG(role play games) games are my favourite. I like to watch sci-fi movies or read books about that genre.</p>
-
+</body>
+</html>
