--- a/Week-1/Homework-2/index.html
+++ b/Week-1/Homework-2/index.html
@@ -1,34 +1,43 @@
-<!--Header-->
-<h1>Uygarcan Boz</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My blog</title>
+</head>
+<body>
+    <!--Heading-->
+    <h1>Uygarcan Boz</h1>
+    <!--Subheading-->
+    <h3>About</h3>
 
-<!--Sub Header-->
-<h3>About</h3>
+    <!--Paragraph-->
+    <p>Hello, my name is Uygarcan. A computer engineering graduate with a passion to learn more about fullstack programming</p>
 
-<!--Paragraph-->
-<p>Hello, my name is Uygarcan. A computer engineering graduate with a passion to learn more about fullstack programming</p>
+    <!--Second Heading-->
+    <h2>Areas of interest</h2>
 
-<!--Second Header-->
-<h2>Areas of interest</h2>
-
-<ol>
-    <li>Movies
-        <ul style="list-style-type: square">
-            <li><a href="https://www.imdb.com/title/tt0816692/" target="_blank">Interstellar</a></li>
-            <li><a href="https://www.imdb.com/title/tt0120737/" target="_blank">The Lord of the Rings: The Fellowship of the Ring</a></li>
-            <li><a href="https://www.imdb.com/title/tt0167261/" target="_blank">The Lord of the Rings: The Two Towers</a></li>
-            <li><a href="https://www.imdb.com/title/tt0167260/" target="_blank">The Lord of the Rings: The Return of the King</a></li>
-        </ul>
-    </li>
-    <li>TV Series
-        <ul style="list-style-type: decimal">
+    <ol>
+        <li>Movies
+            <ul style="list-style-type: square">
+                <li><a href="https://www.imdb.com/title/tt0816692/" target="_blank">Interstellar</a></li>
+                <li><a href="https://www.imdb.com/title/tt0120737/" target="_blank">The Lord of the Rings: The Fellowship of the Ring</a></li>
+                <li><a href="https://www.imdb.com/title/tt0167261/" target="_blank">The Lord of the Rings: The Two Towers</a></li>
+                <li><a href="https://www.imdb.com/title/tt0167260/" target="_blank">The Lord of the Rings: The Return of the King</a></li>
+            </ul>
+        </li>
+        <li>TV Series
+            <ul style="list-style-type: decimal">
                 <li><a href="https://www.imdb.com/title/tt0407362/" target="_blank">Battlestar Galactica</a></li>
                 <li><a href="https://www.imdb.com/title/tt0060028/" target="_blank">Star Trek</a></li>
-        </ul>
-    </li>
+            </ul>
+        </li>
         <li>Books
-        <ul style="list-style-type: lower-roman;">
-            <li>All of the Middle-earth books written by J.R.R. Tolkien</li>
-            <li>The Hitchhiker's Guide to the Galaxy</li>
-        </ul>
-    </li>
-</ol>
+            <ul style="list-style-type: lower-roman;">
+                <li>All of the Middle-earth books written by J.R.R. Tolkien</li>
+                <li>The Hitchhiker's Guide to the Galaxy</li>
+            </ul>
+        </li>
+    </ol>
+</body>
+</html>
