--- a/Week-1/Homework-3/index.html
+++ b/Week-1/Homework-3/index.html
@@ -77,7 +77,7 @@
         </article>
     </section>
 
-    <footer style="text-align:center;">
+    <footer style="text-align:right;">
         <h2 style="color: #592d0d;">Bon appétit</h2>
     </footer>
         
