--- a/Week-1/Homework-3/index.html
+++ b/Week-1/Homework-3/index.html
@@ -31,7 +31,7 @@
         <article>
             <p>
                 <strong style="color: #592d0d;">
-                    <u style="margin-left: 40px;">Serving Size</u>
+                    <u style="margin-left: 40px; margin-right: 60px;">Serving Size</u>
                 </strong>: 4 servings &nbsp;
 
                 <strong style="color: #592d0d;">
