--- a/Week-2/Homework-1/about-us.html
+++ b/Week-2/Homework-1/about-us.html
@@ -35,13 +35,16 @@
     </h3>
 
     <!-- Unordered list start -->
-    <ul>
-        <li>Strategy</li>
-        <li>RPG</li>
-        <li>Turn Based</li>
-        <li>Story</li>
-        <li>Board Games</li>
-    </ul>
+    <div class="list">
+        <ul>
+            <li>Strategy</li>
+            <li>RPG</li>
+            <li>Turn Based</li>
+            <li>Story</li>
+            <li>Board Games</li>
+        </ul>
+    </div>
+    
     <!-- Unordered list end -->
 
 </body>
