--- a/Week-2/Homework-1/our-games.html
+++ b/Week-2/Homework-1/our-games.html
@@ -22,7 +22,7 @@
     <h2>Our Games</h2>
 
     <!-- Ordered list start -->
-    <ol>
+    <ol class="pad">
         <li>
             Lorem, ipsum dolor.<strong>Lorem, ipsum.</strong>
             <br>
